# irmar-git-project

./: .gitignore  .gitignore.orig  README.md  cmake-2015.md  git_slides.ipynb  old_slides.tex  slides.md  slides.tex
R/: frequency.R  frequency.R.orig  tab.disjonctif.R
article/: document.tex
binder/: requirements.txt  runtime.txt
cpp_project/: Adresse.cpp  Adresse.h  CMakeLists.txt  Entreprise.cpp  Entreprise.h  Personne.cpp  Personne.h  commercial.cpp  commercial.h  employe.cpp  employe.h  main.cpp
sandbox/MarieEtienne/: mp.tex
sandbox/josselin/: README.md
